--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       </ul>
     </nav>
     <div class="garbage">
-      <div id="mydivheader"><img src="" 
-                                  width="60" height="60" alt="g"></div>
+      <div id="mydivheader"><img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/33592/potato-chips-clipart-xl.png"
+                                  width="50" height="50" alt="g"></div>
     </div>
     <div class="recycle">
       <div id="mydivheader"><img src="" 
-                                  width="60" height="60" alt="r"></div>
+                                  width="50" height="50" alt="r"></div>
     </div>
     <div class="compost">
       <div id="mydivheader"><img src="" 
-                                  width="60" height="60" alt="c"></div>
+                                  width="50" height="50" alt="c"></div>
     </div>
     
     <div id="points"> Points: 0</div>
@@ -34,11 +34,11 @@
     <div class="clear"> </div>
     <div id="binHolders">
       <ul>
-      <li><div id="trashBin"><img src="https://github.com/Tedtot/Tedtot.github.io/garbagecan.png" 
+      <li><div id="trashBin"><img src="Tedtot.github.io/garbagecan.png" 
                                   width="60" height="60" alt="g"></div></li>
-      <li><div id="recycleBin"><img src="https://github.com/Tedtot/Tedtot.github.io/garbagecan.png" 
+      <li><div id="recycleBin"><img src="Tedtot.github.io/garbagecan.png" 
                                   width="60" height="60" alt="r"></div></li>
-      <li><div id="compostBin"><img src="https://github.com/Tedtot/Tedtot.github.io/garbagecan.png" 
+      <li><div id="compostBin"><img src="Tedtot.github.io/garbagecan.png" 
                                   width="60" height="60" alt="c"></div></li>
       </ul>
     </div>
