--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <ul>
       <li><div id="trashBin"><img src="Tedtot.github.io/garbagecan.png" 
                                   width="60" height="60" alt="g"></div></li>
-      <li><div id="recycleBin"><img src="Tedtot.github.io/garbagecan.png" 
+      <li><div id="recycleBin"><img src="Tedtot.github.io/recyclebin.png" 
                                   width="60" height="60" alt="r"></div></li>
-      <li><div id="compostBin"><img src="Tedtot.github.io/garbagecan.png" 
+      <li><div id="compostBin"><img src="Tedtot.github.io/compostbin.png" 
                                   width="60" height="60" alt="c"></div></li>
       </ul>
     </div>
