Update and rename index.html to game.html

--- a/game.html
+++ b/game.html
@@ -29,16 +29,18 @@
     
     <div id="points"> Points: 0</div>
     <div id="timer"> Time: 0.0</div>
+    <div id =highscore> Highscore: 0</div>
+    <div id =currentscore> Score: 0</div>
     <button id=gamebutton onclick="startGame()">Start Game</button>
 
     <div class="clear"> </div>
     <div id="binHolders">
       <ul>
-      <li><div id="trashBin"><img src="/garbagecan.png" 
+      <li><div id="trashBin"><img src="Tedtot.github.io/garbagecan.png" 
                                   width="60" height="60" alt="g"></div></li>
-      <li><div id="recycleBin"><img src="/recyclebin.png" 
+      <li><div id="recycleBin"><img src="Tedtot.github.io/recyclebin.png" 
                                   width="60" height="60" alt="r"></div></li>
-      <li><div id="compostBin"><img src="/compostbin.png" 
+      <li><div id="compostBin"><img src="Tedtot.github.io/compostbin.png" 
                                   width="60" height="60" alt="c"></div></li>
       </ul>
     </div>
