--- a/quiz.html
+++ b/quiz.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width">
   <title>Quiz</title>
   <style>
-    nav {
+  nav, div {
   text-align: center;
 }
+    div {
+      margin-right: 5%;
+    }
     
 .active {
   color: #ff6f69;
@@ -53,6 +56,8 @@ body {
         <li><a href="https://tedtot.github.io/quiz.html">Take the Quiz</a></li>
       </ul>
     </nav>
+  <div>
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8zVGj0jfOLSaA4T55beHTj6BomW8Vxz-nxMuIQbC9dH1oXg/viewform?embedded=true" width="640" height="4274" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-</body>
+  </div>
+    </body>
 </html>
