--- a/game.html
+++ b/game.html
@@ -9,13 +9,13 @@
   <body>
     <nav>
       <ul id="menu">
-        <li><a href="#" onclick="activateMenuItem(0)">Home</a></li>
-        <li><a href="#" onclick="activateMenuItem(1)">Play the Game</a></li>
-        <li><a href="#" onclick="activateMenuItem(2)">Take the Quiz</a></li>
+        <li><a href="https://tedtot.github.io/index.html">Home</a></li>
+        <li><a href="https://tedtot.github.io/game.html">Play the Game</a></li>
+        <li><a href="https://tedtot.github.io/quiz.html">Take the Quiz</a></li>
       </ul>
     </nav>
     <div class="garbage">
-      <div id="mydivheader"><img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/33592/potato-chips-clipart-xl.png"
+      <div id="mydivheader"><img src=""
                                   width="50" height="50" alt="g"></div>
     </div>
     <div class="recycle">
