--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Pollution in Seattle</title>
+  <style>
   nav {
   text-align: center;
 }
 
-    
 .active {
   color: #ff6f69;
 }
@@ -37,3 +43,8 @@ body {
   background-color: #f5f5f5;
   font-family: 'Arial', sans-serif;
 }
+  </style>
+</head>
+<body>
+    </body>
+</html>
