--- a/index.html
+++ b/index.html
@@ -46,5 +46,12 @@ body {
   </style>
 </head>
 <body>
+  <nav>
+      <ul id="menu">
+        <li><a href="https://tedtot.github.io/index.html">Home</a></li>
+        <li><a href="https://tedtot.github.io/game.html">Play the Game</a></li>
+        <li><a href="https://tedtot.github.io/quiz.html">Take the Quiz</a></li>
+      </ul>
+    </nav>
     </body>
 </html>
