--- a/game.html
+++ b/game.html
@@ -36,11 +36,11 @@
     <div class="clear"> </div>
     <div id="binHolders">
       <ul>
-      <li><div id="trashBin"><img src="Tedtot.github.io/garbagecan.png" 
+      <li><div id="trashBin"><img src="/garbagecan.png" 
                                   width="308" height="160" alt="g"></div></li>
-      <li><div id="recycleBin"><img src="Tedtot.github.io/recyclebin.png" 
+      <li><div id="recycleBin"><img src="/recyclebin.png" 
                                   width="308" height="160" alt="r"></div></li>
-      <li><div id="compostBin"><img src="Tedtot.github.io/compostbin.png" 
+      <li><div id="compostBin"><img src="/compostbin.png" 
                                   width="308" height="160" alt="c"></div></li>
       </ul>
     </div>
