--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {
 
             <div class="navbar">
 
-                <img src="images/Banana.png" class="logo">
+                <img src="/Banana.png" class="logo">
 
                
 
